@@ -1,6 +1,8 @@
 Revision history for Perl extension App::Sqitch
 
 0.30
+     - The `init` command now properly writes out the `[core]` section header
+       when there are only commented core setttings.
 
 0.20  2012-05-01T02:48:47Z
      - Added `--local` option to `sqitch config`.
